# server

client/: CMakeLists.txt  client.c
etc/: polling.c  showip.c
server/: server.c
serverPoll/: CMakeLists.txt  server.c  serverPoll.c
yadisk/: CMakeLists.txt  client.c  gcc  main.c
yadisk/src/: client.c
